third_party_protocol_almerys: enhance claim bank account management in Almerys batch (#3041)
Fix #12369

--- a/modules/third_party_protocol_almerys/doc/en/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12369 Enhance claim bank account management in Almerys batch
 * OTH#00000 Add Almerys chain
 * OTH#00000 Iteration on FEA#11526
 * OTH#00000 Iteration on FEA#11526
