--- a/modules/contract_underwriting/doc/en/CHANGELOG
+++ b/modules/contract_underwriting/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12326 Allow to add medical notes only visible to a specific group during underwriting
+
 Version 2.4 - 2019-04-12
 * FEA#11249 Display extra premium and exclusions to underwriting lines
 * BUG#11143 Remove underwriting extra data from contracts / options
