--- a/modules/table/doc/en/CHANGELOG
+++ b/modules/table/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12364 Allow to import 1d or 2d table from copy/paste from excel and creating dimension values at the same time
+
 Version 2.4 - 2019-04-12
 * BUG#10746 Add cached by-code table lookup
 
