--- a/modules/table/doc/fr/CHANGELOG
+++ b/modules/table/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12364 Possibilité d'importer une table a 1 ou 2 dimensions par copier/coller depuis Excel et en créant en automatique les valeurs des dimensions associées.
+
 Version 2.4 - 2019-04-12
 * BUG#10746 Caching de la recherche des tables "par code"
 
