contract_noemie: fix noemie dates calculation (#3043)
Fix #12370

--- a/modules/contract_noemie/doc/en/CHANGELOG
+++ b/modules/contract_noemie/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12370 Fix Noemie dates
 * FEA#11778 Fix Noemie status management for endorsements
 * FEA#11778 Add test
 * OTH#0000 Add batch chain
