--- a/modules/contract_noemie/doc/fr/CHANGELOG
+++ b/modules/contract_noemie/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12370 Fix Noemie dates
 * FEA#11778 Fix Noemie status management for endorsements
 * FEA#11778 Ajout test
 * OTH#0000 Ajout de la chaîne de batch
