coog_core: Add force_readonly_view flag on fields (#3048)
Fix #12410

--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12410 Possibilité de forcer le contenu d'un champ O2M en readonly
 * BUG#00000 Corrections d'anomalies sur l'export et l'import JSON pour les règles de modes de quittancements, les définitions d'avenants, les questionnaires et les protocoles délégataires
 * BUG#00000 Corrections de quelques anomalies sur l'export et import JSON pour les modèles suivants: séquences de journaux, règles de modes de quittancement, canaux de distribution et adresses de tiers
 * BUG#12285 Correction de la méthode fields_changed_since_date en ajoutant un contrôle sur la présence d'instances passées
