--- a/modules/third_party_protocol_almerys/doc/en/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Remove addresses constraints from register since they are added on setup
 * BUG#12369 Enhance claim bank account management in Almerys batch
 * OTH#00000 Add Almerys chain
 * OTH#00000 Iteration on FEA#11526
