commission_insurance_recovery: Fix commission amount number digits (#3055)
Fix #12438

--- a/modules/commission_insurance_recovery/doc/en/CHANGELOG
+++ b/modules/commission_insurance_recovery/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#12438 Fix the commission amount digits number
+
 Version 2.4 - 2019-04-12
 * OTH#0000 Use option's parent contract as the commissioned contract when computing recovery commissions
 
