--- a/modules/account_payment_paybox_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_paybox_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12377 Add new method to call in configuration which pays contract invoices through Paybox
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
