--- a/modules/contract_insurance_payment/locale/fr.po
+++ b/modules/contract_insurance_payment/locale/fr.po
@@ -102,17 +102,18 @@ msgctxt "field:offered.billing_mode,failure_billing_mode:"
 msgid "Failure Billing Mode"
 msgstr "Mode de quittancement en cas d'échec"
 
-msgctxt "field:offered.product,payment_journal:"
-msgid "Payment Journal"
-msgstr "Journal de paiement"
+msgctxt "field:offered.product,sepa_payment_journal:"
+msgid "Sepa Payment Journal"
+msgstr "Journal de paiement SEPA"
 
-msgctxt "help:offered.product,payment_journal:"
+msgctxt "help:offered.product,sepa_payment_journal:"
 msgid ""
-"Payment journal used when billing mode is set to direct debit.If no journal "
-"defined the global configuration will be used"
+"Sepa payment journal used when billing mode is set to direct debit. If no "
+"journal defined the global configuration will be used"
 msgstr ""
-"Journal de paiement utilisé si le mode de quittancement est prélèvement. Si "
-"aucun journal n'est défini, la configuration gloable sera utilisée"
+"Journal de paiement SEPA utilisé si la méthode de traitement du mode de "
+"quittancement est SEPA. Si aucun journal n'est défini, la configuration "
+"globale sera utilisée"
 
 msgctxt "model:account.payment.merged.by_contract,name:"
 msgid "Merged payments by contracts"
