--- a/modules/account_payment_paybox_cog/doc/fr/CHANGELOG
+++ b/modules/account_payment_paybox_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12377 Ajout d'une méthode à exploiter dans la configuration afin de payer les quittances d'un contrat via Paybox
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
