claim_almerys: Add claim Almerys batch chain (#3056)
Fix #00000

--- a/modules/claim_almerys/doc/en/CHANGELOG
+++ b/modules/claim_almerys/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Add claim almerys batch chain
 * FEA#12006: Filter statements to include only HTP claims
 * FEA#12006: Add tests
 * FEA#12006: Module Creation
