--- a/modules/premium/doc/en/CHANGELOG
+++ b/modules/premium/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Iteration over subdivision taxe rule feature (#12265)
 * FEA#12345 View premiums amount sum bold
 * FEA#12294 Add configuration to contextually ignore some premium dates
 * FEA#12197 Add posibility to monthly synchronize with contract initial start date in premium dates calculation rules. This can be useful when one premium of the year has a different amount.
