--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Fix payment process method getter
 * BUG#12338 Fix broken premium computing on product with annual billing mode and no prorata
 * FEA#12228 Make invoicing behavior customizable to handle invoicing for whole term
 * BUG#12257 Properly check for a contract on the move line (following 8f10fb735)
