--- a/modules/contract_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Correction des méthodes de traitement des mdoes de quittancement
 * BUG#12338 Correction du calcul de primes sur les produits en quittancement annuel et sans prorata
 * FEA#12228 Ajout d'une option permettant de systématiquement quittancer l'intégralité du terme
 * BUG#12257 Vérification de l'existence d'un contrat sur la ligne comptable (suite de 8f10fb735)
