premium: Hotfix missing date in context for eligility rule (#3057)
Fix #00000

--- a/modules/premium/doc/en/CHANGELOG
+++ b/modules/premium/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Hotfix on missing context date when executing eligiblity rule for computation dates lines (premiums)
 * OTH#00000 Iteration over subdivision taxe rule feature (#12265)
 * FEA#12345 View premiums amount sum bold
 * FEA#12294 Add configuration to contextually ignore some premium dates
