--- a/modules/claim_pasrau/doc/fr/CHANGELOG
+++ b/modules/claim_pasrau/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12493 Correction du signe inversé sur le montant de la régularisation S21.G00.56.007
 * BUG#12462 Le montant Pasrau doit être arrondi à l'euro le plus proche
 * BUG#12365 Déclarer zéro pour évter un montant Pasrau négatif S21.G00.20.005
 * BUG#12304 Ne déclarer une modification de champ du tiers uniquement si la valeur précédente n'était pas vide
