--- a/modules/account_payment_sepa_cog/doc/fr/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12319 Ajout d'une information sur le journal de paiement sepa
 * BUG#12460 Correction de la génération des fichiers SEPA par batch
 * OTH#00000 Corriger plusieurs traductions françaises
 * OTH#00000 Ajout de la date d'effet dans la vue liste des mandats
