Feature/automatically set bank account billing information (#3086)
Fix #00000

--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Automatically set bank account on billing information when setting payer
 * OTH#00000 Fix payment process method getter
 * BUG#12338 Fix broken premium computing on product with annual billing mode and no prorata
 * FEA#12228 Make invoicing behavior customizable to handle invoicing for whole term
