--- a/modules/premium/doc/en/CHANGELOG
+++ b/modules/premium/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12463 Fix premium period computation when coverage is defined with an end rule and product has term and renewal rule defined
 * OTH#00000 Hotfix on missing context date when executing eligiblity rule for computation dates lines (premiums)
 * OTH#00000 Iteration over subdivision taxe rule feature (#12265)
 * FEA#12345 View premiums amount sum bold
