--- a/modules/distribution/doc/fr/CHANGELOG
+++ b/modules/distribution/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#12221 Ajout d'une API de création de réseau de distribution
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 * BUG#10010 Mettre à vide l'adresse d'un réseau de distribution lorsqu'on supprime le lien vers le tiers
