document_request : fix bugs following c3e3a8d1 (#3100)

--- a/modules/document_request/locale/fr.po
+++ b/modules/document_request/locale/fr.po
@@ -16,7 +16,7 @@ msgstr "La réception requiert la pièce jointe"
 
 msgctxt "field:document.description,template:"
 msgid "Template"
-msgstr "modèles de corrier"
+msgstr "Modèle de courrier"
 
 msgctxt "field:document.description-extra_data,create_date:"
 msgid "Create Date"
