--- a/modules/claim_prest_ij_service/doc/en/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12546 Fix batch to wait until all files in the transaction are successfully processed before archiving it
 * OTH#00000 Translate Mandate identification to RUM
 * BUG#11890 Cancel fix on conditions of automatic subscription
 * BUG#11890 Fix conditions of automatic subscription when there is deductible period
