--- a/modules/claim_prest_ij_service/doc/fr/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12546 Correction du batch pour attendre que tous les fichiers de la transaction soient traités avant de les archiver
 * OTH#00000 Traduire le champs Identification d'un mandat SEPA par RUM
 * BUG#11890 Annulation de la correction sur les conditions d'inscription automatique
 * BUG#11890 Correction des conditions d'inscription automatique en présence de franchise
