Feature/handle distributor flag network api (#3115)
Fix #00000

--- a/modules/contract_distribution/doc/en/CHANGELOG
+++ b/modules/contract_distribution/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Handle is distributor flag in network creation API
+
 Version 2.4 - 2019-04-12
 * BUG#11119 Parent commercial product display incorrect products
 
