third_party_protocol_almerys: fix almerys v3 batch (#3109)
Fix #0000

--- a/modules/third_party_protocol_almerys/doc/en/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Fix Almerys v3 batch
 * OTH#00000 Remove addresses constraints from register since they are added on setup
 * BUG#12369 Enhance claim bank account management in Almerys batch
 * OTH#00000 Add Almerys chain
