document_request_electronic: Allow to customize electronic signature (#3025)
Fix #12321

--- a/modules/document_request_electronic_signature/locale/fr.po
+++ b/modules/document_request_electronic_signature/locale/fr.po
@@ -6,6 +6,22 @@ msgctxt "field:document.description,digital_signature_required:"
 msgid "Digital Signature Required"
 msgstr "Signature électronique requise"
 
+msgctxt "field:document.description,extra_data:"
+msgid "Extra Data"
+msgstr "Paramètres"
+
+msgctxt "field:document.description,extra_data_summary:"
+msgid "Extra Data Summary"
+msgstr "Résumé des paramètres"
+
+msgctxt "field:document.description,signature_configuration:"
+msgid "Signature Configuration"
+msgstr "Configuration du service de signature"
+
+msgctxt "field:document.description,signature_credential:"
+msgid "Signature Credential"
+msgstr "Authentification pour service de signature"
+
 msgctxt "field:document.request.line,digital_signature_required:"
 msgid "Digital Signature Required"
 msgstr "Signature électronique requise"
@@ -14,6 +30,50 @@ msgctxt "field:document.request.line,electronic_signature_icon:"
 msgid "Electronic Signature Icon"
 msgstr "Icône de signature électronique"
 
+msgctxt "field:document.signature.configuration,extra_data_def:"
+msgid "Extra Data"
+msgstr "Paramètres"
+
+msgctxt "field:document.signature.configuration-extra_data,conf:"
+msgid "Signature Configuration"
+msgstr "Configuration du service de signature"
+
+msgctxt "field:document.signature.configuration-extra_data,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:document.signature.configuration-extra_data,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:document.signature.configuration-extra_data,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:document.signature.configuration-extra_data,extra_data_def:"
+msgid "Extra Data"
+msgstr "Paramètres"
+
+msgctxt "field:document.signature.configuration-extra_data,id:"
+msgid "ID"
+msgstr "Identifiant"
+
+msgctxt "field:document.signature.configuration-extra_data,rec_name:"
+msgid "Record Name"
+msgstr "Nom de l'enregistrement"
+
+msgctxt "field:document.signature.configuration-extra_data,write_date:"
+msgid "Write Date"
+msgstr "Modifié par"
+
+msgctxt "field:document.signature.configuration-extra_data,write_uid:"
+msgid "Write User"
+msgstr "Modifié par"
+
+msgctxt "field:document.signature.configuration-extra_data,xml_id:"
+msgid "XML Id"
+msgstr "XML Id"
+
 msgctxt "help:document.request.line,received:"
 msgid ""
 "If a digital signature is required the document cannot be marked as received"
@@ -21,3 +81,25 @@ msgid ""
 msgstr ""
 "Si une signature électronique est requise, le document ne peut être marqué "
 "comme reçu avant d'être signé."
+
+msgctxt "model:document.signature.configuration-extra_data,name:"
+msgid "Relation between Signature Configuration and Extra Data"
+msgstr ""
+"Relation entre la configuration du service de signature et la donnée "
+"complémentaire"
+
+msgctxt "model:extra_data,string:signature_coordinate_x"
+msgid "The horizontal coordinate on the page"
+msgstr "Coordonnée horizontale sur la page"
+
+msgctxt "model:extra_data,string:signature_coordinate_y"
+msgid "The vertical coordinate on the page"
+msgstr "Coordonnée verticale sur la page"
+
+msgctxt "model:extra_data,string:signature_page"
+msgid "The page on which the signature must appear"
+msgstr "La page sur laquelle apparaît la signature"
+
+msgctxt "selection:extra_data,kind:"
+msgid "Electronic Signature"
+msgstr "Signature électronique"
