contract_insurance_payment: Fix payment_journal rename following #12377 (#3112)
Fix #12377

--- a/modules/contract_insurance_payment/doc/en/CHANGELOG
+++ b/modules/contract_insurance_payment/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Fix following evolution 12377
 * BUG#11268 The move the manual payment is now always done on failure day
 
 Version 2.4 - 2019-04-12
