--- a/modules/contract_insurance_payment/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_payment/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Fix following evolution 12377
 * BUG#11268 Le basculement en paiement manuel se fait désormais toujours à la date du rejet
 
 Version 2.4 - 2019-04-12
