commission_insurance_rule_engine: Add loan information in commission context (#3120)
Fix #00000

--- a/modules/commission_insurance_rule_engine/doc/fr/CHANGELOG
+++ b/modules/commission_insurance_rule_engine/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Ajout des informations du prêt dans le contexte commission du moteur de règle
+
 Version 2.4 - 2019-04-12
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
